example/otel/observability/jaeger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: jaeger.brcmlabs.com
    http:
      paths:
      - backend:
          service:
            name: simple-allinone-query
            port:
              number: 16686
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jaeger.brcmlabs.com
    secretName: default
